# ampd-release-testing

./: Cargo.toml  README.md
.github/actions/release/: action.yaml
.github/workflows/: basic.yaml  build-latest-docker-image.yaml  codecov.yaml  release.yaml
ampd/: Cargo.toml
ampd/src/: cli.rs  lib.rs  main.rs
ampd/src/handlers/: mod.rs  sui_verify_worker_set.rs
ampd/src/sui/: json_rpc.rs  verifier.rs
contracts/aggregate-verifier/: Cargo.toml  test
contracts/batching/: Cargo.toml
contracts/connection-router/: Cargo.toml
contracts/voting-verifier/src/: execute.rs  msg.rs  query.rs
contracts/voting-verifier/tests/: tests.rs
