version = "ampd-v0.0.2"

[package]
edition = "2018"
name = "ampd"
version = "0.1.0"

[dependencies]
async-trait = "0.1.59"
base64 = "0.21.2"
config = "0.13.2"
cosmos-sdk-proto = "0.16.0"
deref-derive = "0.1.0"
derive_builder = "0.12.0"
dirs = "5.0.1"
enum-display-derive = "0.1.1"
futures = "0.3.25"
humantime-serde = "1.1.1"
mockall = "0.11.3"
prost = "0.11.9"
serde_json = "1.0.89"
serde_with = "3.2.0"
tokio-util = "0.7.8"
toml = "0.5.9"
tonic = "0.8.3"
url = "2.3.1"

  [dependencies.axelar-wasm-std]
  workspace = true

  [dependencies.clap]
  version = "4.2.7"
  features = [ "derive", "cargo" ]

  [dependencies.connection-router]
  workspace = true

  [dependencies.cosmrs]
  version = "0.14.0"
  features = [ "cosmwasm" ]

  [dependencies.cosmwasm-std]
  version = "1.2.1"
  features = [ "stargate" ]

  [dependencies.ecdsa]
  version = "0.16.6"

  [dependencies.error-stack]
  workspace = true

  [dependencies.ethers]
  version = "2.0.8"
  features = [ "rustls" ]

  [dependencies.events]
  workspace = true

  [dependencies.events-derive]
  workspace = true

  [dependencies.hex]
  version = "0.4.3"
  features = [ "serde" ]

  [dependencies.itertools]
  workspace = true

  [dependencies.k256]
  version = "0.13.1"
  features = [ "ecdsa" ]

  [dependencies.move-core-types]
  git = "https://github.com/mystenlabs/sui"
  tag = "mainnet-v1.9.1"

  [dependencies.multisig]
  workspace = true

  [dependencies.report]
  workspace = true

  [dependencies.serde]
  version = "1.0.147"
  features = [ "derive" ]

  [dependencies.service-registry]
  workspace = true

  [dependencies.sui-json-rpc-types]
  git = "https://github.com/mystenlabs/sui"
  tag = "mainnet-v1.9.1"

  [dependencies.sui-types]
  git = "https://github.com/mystenlabs/sui"
  features = [ "test-utils" ]
  tag = "mainnet-v1.9.1"

  [dependencies.tendermint]
  git = "https://github.com/axelarnetwork/tendermint-rs.git"
  branch = "v0.33.x"

  [dependencies.tendermint-rpc]
  git = "https://github.com/axelarnetwork/tendermint-rs.git"
  branch = "v0.33.x"
  features = [ "http-client" ]

  [dependencies.thiserror]
  workspace = true

  [dependencies.tokio]
  version = "1.22.0"
  features = [ "signal" ]

  [dependencies.tokio-stream]
  version = "0.1.11"
  features = [ "sync" ]

  [dependencies.tracing]
  version = "0.1.37"
  features = [ "valuable", "log" ]

  [dependencies.tracing-core]
  version = "0.1.30"
  features = [ "valuable" ]

  [dependencies.tracing-subscriber]
  version = "0.3.16"
  features = [ "json", "valuable" ]

  [dependencies.valuable]
  version = "0.1.0"
  features = [ "derive" ]

  [dependencies.valuable-serde]
  version = "0.1.0"
  features = [ "std" ]

  [dependencies.voting-verifier]
  workspace = true

[dev-dependencies]
elliptic-curve = "0.13.5"
generic-array = "0.14.7"
rand = "0.8.5"
random-string = "1.0.0"

[build-dependencies]
ethers = "2.0.8"
tonic-build = "0.8.3"
